--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: team_25_app
 description: "ChemiLens - Chemical compound detection app."
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '3.9.2'
-  flutter: '3.35.3'
+  sdk: "3.9.2"
+  flutter: "3.35.3"
 
 dependencies:
   flutter:
@@ -26,5 +26,4 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-
   uses-material-design: true
