--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/vision": "^5.3.3",
     "@google/genai": "^1.19.0",
     "@google/generative-ai": "^0.24.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
