--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,14 @@ dependencies:
   http_parser: ^4.0.2
   vector_math: ^2.1.4
   path_provider: ^2.1.3
-  webview_flutter: ^4.4.2
+  webview_flutter: ^4.13.0
 
   image: ^4.1.7
   go_router: ^16.2.1
   flutter_svg: ^2.0.10+1
   flutter_localizations:
     sdk: flutter
+  model_viewer_plus: ^1.9.3
 
 dev_dependencies:
   flutter_test:
