--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,20 @@ dependencies:
     sdk: flutter
   model_viewer_plus: ^1.9.3
   ar_flutter_plugin: ^0.7.3
+  firebase_core: ^4.1.0
+  json_annotation: ^4.9.0
+  flutter_riverpod: ^3.0.0
+  riverpod_annotation: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  freezed: ^3.2.3
+  build_runner: ^2.7.1
+  riverpod_generator: ^3.0.0
+  json_serializable: ^6.11.1
 
 flutter:
   uses-material-design: true
