--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/vision": "^5.3.3",
     "@google/genai": "^1.19.0",
     "@google/generative-ai": "^0.24.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "multer": "^2.0.2",
@@ -22,6 +23,7 @@
     "openai": "^5.20.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.1",
