--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     sdk: flutter
   model_viewer_plus: ^1.9.3
   ar_flutter_plugin: ^0.7.3
+  webview_flutter_web: ^0.2.3+4
 
 dev_dependencies:
   flutter_test:
