--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   image_picker: ^1.1.0
+  camera: ^0.11.0+2
+  permission_handler: ^10.4.5
   dio: ^5.7.0
   http_parser: ^4.0.2
   vector_math: ^2.1.4
